# lab_asap

lab6/: CMakeLists.txt  lab6.cpp
lab6/inc/: Head.hpp
lab6/src/: functions.cpp
lab8/: lab8.cpp  lab8.sln  lab8.vcxproj
lab8/x64/Debug/: lab8.exe.recipe  lab8.ilk  lab8.vcxproj.FileListAbsolute.txt  vc143.idb
lab8/x64/Debug/lab8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab8.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
